--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,30 +1,18 @@
 page-home {
-    .animated {
-        
-        
-      }
-
-    @keyframes rotateIn {
-        from {
-          transform-origin: center;
-          transform: rotate3d(0, 0, 1, -200deg);
-          opacity: 0;
-        }
-      
-        to {
-          transform-origin: center;
-          transform: none;
-          opacity: 1;
-        }
-      }
-      
-      .rotateIn {
-        animation-duration: 1s;
-        animation-fill-mode: both;
-        animation-delay: 0.1s;
-        animation-name: rotateIn;
-      }
-      
-      
-
+  h2 {
+    font-family: Neucha, serif;
+  }
+  h4 {
+    font-family: 'Bad Script', serif;
+  }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  .breaker {
+    display: block;
+    height: 2vh;
+  }
 }
